--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/xhtml" 
       xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
+  <head>
     <title>Taco Cloud</title>
-</head>
-<body>
+  </head>
+  
+  <body>
     <h1>Welcome to...</h1>
-    <img th:src="@{/images/TacoCloud.png}" alt="" src=""/>
+    <img th:src="@{/images/TacoCloud.png}"/>
+    <form method="POST" th:action="@{/logout}" id="logoutForm">
+      <input type="submit" value="Logout"/>
+    </form>
+    
     <a th:href="@{/design}" id="design">Design a taco</a>
-</body>
+  </body>
 </html>
